# pi-air-meter

./: LICENSE  README.md  requirements.txt
rev1/: README.md  app.py  bme.py
rev2/: Cargo.toml  README.md
rev2/src/: bme280.rs  main.rs
