[package]
name = "rev2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mh-z19 = "0.3.3"
rppal = { version = "0.14.1", features = ["hal"] }
waveshare-rpi = { git = "https://github.com/Polygonalr/waveshare-rpi.git", version = "0.1.0" }
